[gd_scene load_steps=2 format=3 uid="uid://rfbg4stojcvr"]

[ext_resource type="Script" path="res://main/bet_info/bet_info.gd" id="1_dpkgq"]

[node name="BetInfo" type="VBoxContainer"]
offset_right = 569.0
offset_bottom = 286.0
script = ExtResource("1_dpkgq")

[node name="Help" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Content" type="VBoxContainer" parent="Help"]
layout_mode = 2

[node name="Header" type="Label" parent="Help/Content"]
layout_mode = 2
text = "HOW TO BET"
horizontal_alignment = 1

[node name="Body" type="RichTextLabel" parent="Help/Content"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Type commands in chat:
[color=white]!register[/color] to register your username
[color=white]!bet amount team[/color] to bet [color=white]amount[/color] credits on [color=white]team[/color]
[color=white]!balance[/color] - Check your credit balance"

[node name="Header" type="PanelContainer" parent="."]
layout_mode = 2

[node name="Content" type="HBoxContainer" parent="Header"]
layout_mode = 2

[node name="Team1" type="Label" parent="Header/Content"]
layout_mode = 2
text = "TEAM NAME
TEAM ODDS
BET INFO"

[node name="BetRatio" type="HBoxContainer" parent="Header/Content"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="TeamColor1" type="ColorRect" parent="Header/Content/BetRatio"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Money" type="Label" parent="Header/Content/BetRatio/TeamColor1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -13.0
offset_right = 23.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "1000C"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TeamColor2" type="ColorRect" parent="Header/Content/BetRatio"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Money" type="Label" parent="Header/Content/BetRatio/TeamColor2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -13.0
offset_right = 23.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "1000C"

[node name="Team2" type="Label" parent="Header/Content"]
layout_mode = 2
text = "TEAM NAME
TEAM ODDS
BET INFO"
horizontal_alignment = 2

[node name="TopBets" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Team1" type="PanelContainer" parent="TopBets"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Content" type="VBoxContainer" parent="TopBets/Team1"]
layout_mode = 2

[node name="Header" type="Label" parent="TopBets/Team1/Content"]
layout_mode = 2
text = "TOP 10 BETS: TEAM"

[node name="BetList" type="Label" parent="TopBets/Team1/Content"]
layout_mode = 2
text = "Bet List"

[node name="Team2" type="PanelContainer" parent="TopBets"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Content" type="VBoxContainer" parent="TopBets/Team2"]
layout_mode = 2

[node name="Header" type="Label" parent="TopBets/Team2/Content"]
layout_mode = 2
text = "TOP 10 BETS: TEAM"

[node name="BetList" type="Label" parent="TopBets/Team2/Content"]
layout_mode = 2
text = "Bet List"
